--- a/sampleYAML.yml
+++ b/sampleYAML.yml
@@ -4,8 +4,8 @@ es:
     created_at: Fecha Creación
     updated_at: Fecha Actualización
     type: Tipo
-    start_date: Fecha Inicio
-    end_date: Fecha Término
+    start_date: Fecha de Inicio
+    end_date: Fecha de Término
     active: Activo
     weight: Peso
     person: Persona
