--- a/sampleYAML.yml
+++ b/sampleYAML.yml
@@ -1,8 +1,8 @@
 es:
   attributes:
     id: ID
-    created_at: Fecha Creación
-    updated_at: Fecha Actualización
+    created_at: Fecha de Creación
+    updated_at: Fecha de Actualización
     type: Tipo
     start_date: Fecha de Inicio
     end_date: Fecha de Término
