--- a/YAML (esp).yml
+++ b/YAML (esp).yml
@@ -1,8 +1,8 @@
 es:
   attributes:
     id: ID
-    created_at: Fechas de Creación
-    updated_at: Fechas de Actualización
+    created_at: Fechas de Creación nueva
+    updated_at: Fechas de Actualización nueva
     type: Tipo
     start_date: Fecha de Inicio
     end_date: Fecha de Término
