Update YAML (esp).yml (#23)
* Update YAML (esp).yml

* Delete en directory

* Delete pt directory

* Update and rename YAML (esp).yml to YAML (esp - branch ver).yml

* File YAML (esp - branch ver).yml committed.

* File YAML (esp - branch ver).yml committed.

--- a/YAML (esp - branch ver).yml
+++ b/YAML (esp - branch ver).yml
@@ -1,8 +1,8 @@
 es:
   attributes:
     id: ID
-    created_at: Fechas de Creación
-    updated_at: Fechas de Actualización
+    created_at: Fechas de Creación nuevas
+    updated_at: Fechas de Actualización nuevas
     type: Tipo
     start_date: Fecha de Inicio
     end_date: Fecha de Término
