Update YAML (esp - branch ver)-es-en-REV-C.yml

--- a/en/YAML (esp - branch ver)-es-en-REV-C.yml
+++ b/en/YAML (esp - branch ver)-es-en-REV-C.yml
@@ -1,7 +1,7 @@
 en:
   attributes:
     id: ID
-    created_at: New Creation Dates
+    created_at: New Creation Dates (test nuevo)
     type: Type
     start_date: Start Date
     end_date: Termination Date
