--- a/YAML (esp - branch ver).yml
+++ b/YAML (esp - branch ver).yml
@@ -1,7 +1,7 @@
 es:
   attributes:
     id: ID
-    created_at: Fechas de Creacióhththgjn nuevas
+    created_at: Fechas de Creación nuevas
     type: Tipo
     start_date: Fecha de Inicio
     end_date: Fecha de Término
